--- a/WebDevelopmentProjects/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
+++ b/WebDevelopmentProjects/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
@@ -1,4 +1,3 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <! DOCTYPE  html>
 <html lang="eng">
     <head>
@@ -18,7 +17,11 @@
         <a href="./public/about.html">About me</a>
         <a href="./public/contact.html">contact me</a> 
         </body>
-</html><!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+</html>
+
+<!-- TODO 1: Create the HTML Boilerplate -->
+
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 
